@@ -66,7 +66,7 @@ Requires: xxhash-libs
 
 %description
 Phobos aims to implement high performance distributed object storage on a wide
-variety of media including tapes, disks, other object stores...
+variety of media including tapes, POSIX file systems, other object stores...
 This initial version is however limited to a single host. It can manage tapes
 in a SCSI library and local directories.
 
