@@ -30,8 +30,8 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/db/sql/1.92/schema.sql \
 	   phobos/db/sql/1.93/drop_schema.sql \
 	   phobos/db/sql/1.93/schema.sql \
-	   phobos/db/sql/2.0/drop_schema.sql \
-	   phobos/db/sql/2.0/schema.sql \
+	   phobos/db/sql/1.95/drop_schema.sql \
+	   phobos/db/sql/1.95/schema.sql \
 	   scripts/phobos \
 	   setup.py
 
