@@ -63,30 +63,20 @@ function insert_locks
 
     insert into device (family, model, id, host, adm_status,path)
     values
-            ('disk'::dev_family, NULL, '1',
-                'host1', 'locked'::adm_status, 'path1'),
             ('dir'::dev_family, NULL, '2',
                 'host2', 'unlocked'::adm_status, 'path2'),
             ('tape'::dev_family, NULL, '3',
-                'host3', 'locked'::adm_status, 'path3'),
-            ('disk'::dev_family, NULL, '4',
-                '$host', 'locked'::adm_status, 'path4');
+                'host3', 'locked'::adm_status, 'path3');
 
     insert into media (family, model, id, adm_status, fs_type, fs_label,
                        address_type, fs_status, stats, tags)
     values
-            ('disk'::dev_family, NULL, '1', 'locked'::adm_status,
-                'POSIX'::fs_type, 'label1', 'PATH'::address_type,
-                'full'::fs_status, '{}', '{}'),
             ('dir'::dev_family, NULL, '2', 'unlocked'::adm_status,
                 'POSIX'::fs_type, 'label2', 'PATH'::address_type,
                 'empty'::fs_status, '{}', '{}'),
             ('tape'::dev_family, NULL, '3', 'locked'::adm_status,
                 'POSIX'::fs_type, 'label3', 'PATH'::address_type,
-                'blank'::fs_status, '{}', '{}'),
-            ('disk'::dev_family, NULL, '4', 'locked'::adm_status,
-                'POSIX'::fs_type, 'label4', 'PATH'::address_type,
-                'full'::fs_status, '{}', '{}');
+                'blank'::fs_status, '{}', '{}');
 EOF
 }
 
@@ -160,9 +150,6 @@ function test_family_param
 {
     $phobos lock clean -t media -f dir --global --force \
         || error "lock clean operation on 'dir' family failed"
-
-    $phobos lock clean -t media_update -f disk \
-        || error "lock clean operation on 'disk' family failed"
 
     $phobos lock clean -t device -f tape \
         || error "lock clean operation on 'tape' family failed"
